--- a/index.html
+++ b/index.html
@@ -1,7 +1,29 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <link rel="stylesheet" href="//unpkg.com/bulma">
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+<section class="hero">
+    <div class="hero-body">
+        <div class="container">
+            <h1 class="title">
+                Hello World
+            </h1>
+            <h2 class="subtitle">
+                I'm hosted with GitHub Pages.
+            </h2>
+            <p>
+                Read the latest <a href="//bbc.co.uk/news">BBC News</a>
+            </p>
+
+            <p>
+                Go to <a href="//github.io">GitHub</a>
+            </p>
+
+        </div>
+    </div>
+</section>
 </body>
 </html>
