--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<section class="hero">
+<section class="hero is-medium is-danger is-bold">
     <div class="hero-body">
         <div class="container">
             <h1 class="title">
