--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
                 Go to <a href="//github.io">GitHub</a>
             </p>
 
+            <p>
+                Version 1
+            </p>
+
         </div>
     </div>
 </section>
