--- a/index.html
+++ b/index.html
@@ -23,25 +23,31 @@
             </p>
 
             <p>
-                Version 1
+                Version 2
             </p>
 
         </div>
     </div>
 </section>
 
+
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script>
 
-    const Http = new XMLHttpRequest();
-    const url='https://jsonplaceholder.typicode.com/posts';
-    Http.open("GET", url);
-    Http.send();
-
-    Http.onreadystatechange = (e) => {
-    console.log(Http.responseText)
-}
+    const Url='https://jsonplaceholder.typicode.com/posts';
+    const params={
+        name: "Said",
+        id: 21
+    }
+    axios.get(Url,params)
+        .then(data=>console.log(Data))
+        .catch(err=>console.log(err))
 
 </script>
+
+
+
+
 
 </body>
 </html>
