--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         id: 21
     }
     axios.get(Url,params)
-        .then(data=>console.log(Data))
+        .then(data=>console.log(data))
         .catch(err=>console.log(err))
 
 </script>
